--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Bean的博客</title><link href=/static/css/app.9271fd835ead822f88ed67400d05bb44.css rel=stylesheet></head><body style="margin: 0px"><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.d5ced11d648e0dba51c8.js></script><script type=text/javascript src=/static/js/app.3ce7717d84f6db0e1e33.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BeanWei</title>
+</head>
+<body>
+    Hello, World!
+</body>
+</html>
